# genann_cuda

./: CMakeLists.txt  genann.c  genann.cu  genann_cuda.cu  main.c
include/: genann.h  genann_cuda.cuh
